chore: 更新生产环境配置

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 VITE_APP_TITLE = 'archery admin'
 VITE_APP_NAME = 'archery admin'
 VITE_APP_DESCRIPTION = '欢迎使用archery admin'
-VITE_API_URL = 'http://localhost:8080'
+VITE_API_URL = 'https://klvgivfxrdai.sealosbja.site'
 VITE_WS_URL = 'http://localhost:8081'
-VITE_UPLOAD_URL = 'http://localhost:8080'
+VITE_UPLOAD_URL = 'https://klvgivfxrdai.sealosbja.site'
