--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "@element-plus/icons-vue": "^2.3.1",
     "@leafer-in/animate": "^1.3.1",
     "@leafer-in/color": "^1.3.1",
@@ -24,10 +25,12 @@
     "@leafer-in/viewport": "^1.3.1",
     "@vueuse/core": "^10.7.1",
     "animate.css": "^4.1.1",
+    "ant-design-vue": "^4.2.6",
     "dayjs": "^1.11.10",
     "element-plus": "^2.4.4",
     "json-editor-vue3": "^1.1.1",
     "leafer-ui": "^1.3.1",
+    "lodash": "^4.17.21",
     "mathjs": "^13.2.0",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
@@ -35,14 +38,15 @@
     "screenfull": "^6.0.2",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
-    "lodash": "^4.17.21",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "husky": "^8.0.3",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^18.19.3",
     "@unocss/preset-rem-to-px": "^0.58.3",
     "@vitejs/plugin-vue": "^4.5.2",
@@ -50,21 +54,19 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.17.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.7",
     "npm-run-all2": "^6.1.1",
     "openapi-typescript": "^6.7.4",
+    "prettier": "^3.2.5",
+    "typescript": "^5.3.3",
     "unocss": "^0.58.0",
     "unplugin-auto-import": "^0.17.3",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.10",
-    "vue-tsc": "^1.8.27",
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@types/lodash": "^4.17.0",
-    "eslint": "^8.57.0",
-    "lint-staged": "^15.2.7",
-    "prettier": "^3.2.5",
-    "typescript": "^5.3.3"
+    "vue-tsc": "^1.8.27"
   },
   "lint-staged": {
     "**/*.{vue,js,ts,jsx,tsx}": "eslint --fix",
